Basic frontend design

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -14,38 +14,46 @@
             <h1>You Draw I Guess</h1>
             <button id="reconnect">Reconnect</button>
         </div>
-        <div class="roomsList">
-            <h2>Room List:</h2>
-            <ul id="roomsList"></ul>
-            <button id="createRoom">Create Room</button>
-        </div>
-        <div class="playersList">
-            <h2>Player List:</h2>
-            <ul id="playersList"></ul>
-        </div>
-        <div class="drawingTools">
-            <span>Color</span>
-            <input type="color" id="colorPicker" value="#000000">
-            <span>Size</span>
-            <input type="range" id="sizePicker" min="1" max="10" value="1">
-        </div>
-        <div class="canvasTools">
-            <button id="undo">Undo</button>
-            <button id="redo">Redo</button>
-        </div>
-        <div class="guessBox">
-            <h2 id="guessHeader">Guess the word:</h2>
-            <input type="text" id="guessInput" maxlength="32" placeholder="Input your guess here.">
-            <button id="submitGuess">Submit</button>
-        </div>
-        <div class="chatBox">
-            <h2>Chat:</h2>
-            <textarea id="chatHistory" readonly></textarea>
-            <input type="text" id="chatInput" maxlength="256" placeholder="Send a message.">
-            <button id="sendChat">Send</button>
-        </div>
-        <div class="canvasBox">
-            <canvas id="canvas"></canvas>
+        <div class="mainPanel">
+            <div class="leftSubPanel subPanel">
+                <div class="playersList">
+                    <h2>Player List:</h2>
+                    <ul id="playersList"></ul>
+                </div>
+            </div>
+            <div class="middleSubPanel subPanel">
+                <div class="drawingTools">
+                    <span>Color</span>
+                    <input type="color" id="colorPicker" value="#000000">
+                    <span>Size</span>
+                    <input type="range" id="sizePicker" min="1" max="10" value="1">
+                </div>
+                <div class="canvasTools">
+                    <button id="undo">Undo</button>
+                    <button id="redo">Redo</button>
+                </div>
+                <div class="canvasBox">
+                    <canvas id="canvas"></canvas>
+                </div>
+                <div class="guessBox">
+                    <h2 id="guessHeader">Guess the word:</h2>
+                    <input type="text" id="guessInput" maxlength="32" placeholder="Input your guess here.">
+                    <button id="submitGuess">Submit</button>
+                </div>
+                <div class="chatBox">
+                    <h2>Chat:</h2>
+                    <textarea id="chatHistory" readonly></textarea>
+                    <input type="text" id="chatInput" maxlength="256" placeholder="Send a message.">
+                    <button id="sendChat">Send</button>
+                </div>
+            </div>
+            <div class="rightSubPanel subPanel">
+                <div class="roomsList">
+                    <h2>Room List:</h2>
+                    <ul id="roomsList"></ul>
+                    <button id="createRoom">Create Room</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
