Added round timer and the ability to kick players, and updated README.md

--- a/src/static/index.html
+++ b/src/static/index.html
@@ -22,6 +22,9 @@
                 </div>
             </div>
             <div class="middleSubPanel subPanel">
+                <div class="counter">
+                    <h2 id="countdown">Timeleft: 0s</h2>
+                </div>
                 <div class="drawingTools">
                     <span>Color</span>
                     <input type="color" id="colorPicker" value="#000000">
